# CppApps

./: CMakeLists.txt  README.md
ProcessMonitor/: CMakeLists.txt  main.cc
ProcessMonitor/inc/: appConfig.h  processInfo.h  processLauncher.h  processMonitor.h  processWatcher.h
ProcessMonitor/src/: CMakeLists.txt  appConfig.cc  processLauncher.cc  processMonitorMain.cc  processWatcher.cc
ProcessMonitor/tests/: CMakeLists.txt  appConfigTest.cc  testConfig.txt
lib/tools/inc/: log.h  utils.h
